--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -109,15 +109,15 @@
                             android:lineSpacingMultiplier="1.25"
                             android:text="Email Address"
                             android:textColor="#454C66"
-                            android:textSize="13sp"
+                            android:textSize="15sp"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:layout_editor_absoluteX="0dp"
                             tools:layout_editor_absoluteY="-2dp" />
 
-                        <View
+                        <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="0dp"
-                            android:layout_height="50dp"
+                            android:layout_height="55dp"
                             android:layout_marginTop="9dp"
                             android:background="#F5F6F6"
                             app:layout_constraintHorizontal_weight="1"
@@ -125,27 +125,28 @@
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
                             tools:layout_editor_absoluteX="0dp"
-                            tools:layout_editor_absoluteY="27dp" />
+                            tools:layout_editor_absoluteY="27dp">
 
-                        <EditText
-                            android:id="@+id/et_email_login"
-                            android:layout_width="260dp"
-                            android:layout_height="18dp"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="23dp"
-                            android:background="#00000000"
-                            android:gravity="start|center_vertical"
-                            android:hint="iotlabkiit@yandex.com"
-                            android:inputType="textEmailAddress"
-                            android:maxLines="1"
-                            android:textColor="#19224C"
-                            android:textColorHint="#D0D1D5"
-                            android:textSize="15sp"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
-                            tools:layout_editor_absoluteX="20dp"
-                            tools:layout_editor_absoluteY="41dp" />
+                            <androidx.appcompat.widget.AppCompatEditText
+                                android:id="@+id/et_email_login"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#00000000"
+                                android:gravity="start|center_vertical"
+                                android:inputType="text"
+                                android:maxLines="1"
+                                android:textColor="#454C66"
+                                android:textSize="15sp"
+                                android:hint="Your email"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toBottomOf ="@id/password_text_view"
+                                tools:layout_editor_absoluteX="19dp"
+                                tools:layout_editor_absoluteY="48dp"
+                                />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -168,15 +169,15 @@
                             android:lineSpacingMultiplier="1.25"
                             android:text="Password"
                             android:textColor="#454C66"
-                            android:textSize="13sp"
+                            android:textSize="15sp"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:layout_editor_absoluteX="0dp"
                             tools:layout_editor_absoluteY="-2dp" />
 
-                        <View
+                        <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="0dp"
-                            android:layout_height="50dp"
+                            android:layout_height="55dp"
                             android:layout_marginTop="9dp"
                             android:background="#F5F6F6"
                             app:layout_constraintHorizontal_weight="1"
@@ -184,25 +185,29 @@
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                             tools:layout_editor_absoluteX="0dp"
-                            tools:layout_editor_absoluteY="27dp" />
+                            tools:layout_editor_absoluteY="27dp"
+                            app:passwordToggleEnabled="true">
 
-                        <EditText
-                            android:id="@+id/et_pass_login"
-                            android:layout_width="246dp"
-                            android:layout_height="19dp"
-                            android:layout_marginStart="19dp"
-                            android:layout_marginLeft="19dp"
-                            android:layout_marginTop="23dp"
-                            android:background="#00000000"
-                            android:gravity="start|center_vertical"
-                            android:inputType="text"
-                            android:maxLines="1"
-                            android:textColor="#000000"
-                            android:textSize="12sp"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/password_text_view"
-                            tools:layout_editor_absoluteX="19dp"
-                            tools:layout_editor_absoluteY="48dp" />
+                            <androidx.appcompat.widget.AppCompatEditText
+                                android:id="@+id/et_pass_login"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#00000000"
+                                android:gravity="start|center_vertical"
+                                android:inputType="text"
+                                android:maxLines="1"
+                                android:textColor="#000000"
+                                android:textSize="15sp"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toBottomOf ="@id/password_text_view"
+                                tools:layout_editor_absoluteX="19dp"
+                                tools:layout_editor_absoluteY="48dp"
+                                 />
+
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
