--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -48,7 +48,7 @@ android:background="#FFFFFF">
                 app:layout_constraintTop_toBottomOf="@+id/inputs_constraint_layout" />
 
             <TextView
-                android:id="@+id/don_thave_an_accoun_button"
+                android:id="@+id/already_an_accoun_button"
                 android:layout_width="193dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="32dp"
@@ -133,7 +133,7 @@ android:background="#FFFFFF">
                             android:maxLines="1"
                             android:textColor="#454C66"
                             android:textSize="14sp"
-                            android:hint="nullclass@gmail.com"
+                            android:hint="Your email"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf ="@+id/email_address_text_view"
                             tools:layout_editor_absoluteX="19dp"
@@ -199,6 +199,7 @@ android:background="#FFFFFF">
                             android:maxLines="1"
                             android:textColor="#454C66"
                             android:textSize="14sp"
+                            android:hint="Create password"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf ="@+id/password_text_view_signup"
                             tools:layout_editor_absoluteX="19dp"
@@ -260,7 +261,7 @@ android:background="#FFFFFF">
                             android:maxLines="1"
                             android:textColor="#454C66"
                             android:textSize="14sp"
-                            android:hint="Nullclass"
+                            android:hint="Create username"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf ="@+id/username_text_view"
                             tools:layout_editor_absoluteX="19dp"
